@@ -150,6 +150,7 @@ FUSE_2.7 {
 		fuse_fs_utimens;
 		fuse_fs_write;
 		fuse_register_module;
+		fuse_version;
 
 	local:
 		*;
